Almost all done

--- a/css/default.css
+++ b/css/default.css
@@ -223,3 +223,4 @@ h1 .maintitle {
 	background-image: -o-linear-gradient(bottom, #a0d468, #8cc152);
 	background-image: linear-gradient(to top, #a0d468, #8cc152);
 }
+/*------------*/
