--- a/css/default.css
+++ b/css/default.css
@@ -143,6 +143,10 @@ h1 .maintitle {
 	white-space: nowrap;
 	font-size: 0;
 }
+.sites-ul.transitioned {
+	-webkit-transition: left 0.6s 0s ease-out;
+	transition: left 0.6s 0s ease-out;
+}
 .sites-ul li {
 	display: inline-block;
 	*display: inline;
@@ -181,7 +185,7 @@ h1 .maintitle {
 }
 .f-column h3 {
 	margin: 0 0 35px 0;
-	padding: 0 0 0 49px;
+	padding: 0 0 0 30px;
 	font-size: 1.125em;
 	text-transform: uppercase;
 }
@@ -215,21 +219,21 @@ h1 .maintitle {
 	color: #fff !important;
 	outline: none;
 	border-radius: 7px;
-	background-color: #8cc152;
-	box-shadow: 0 3px #7e9467;
-	background-image: -webkit-linear-gradient(bottom, #8cc152, #a0d468);
-	background-image: -moz-linear-gradient(bottom, #8cc152, #a0d468);
-	background-image: -o-linear-gradient(bottom, #8cc152, #a0d468);
-	background-image: linear-gradient(to top, #8cc152, #a0d468);
+	background-color: #82c837;
+	box-shadow: 0 3px #6d9344;
+	background-image: -webkit-linear-gradient(bottom, #74bd24, #8fde39);
+	background-image: -moz-linear-gradient(bottom, #74bd24, #8fde39);
+	background-image: -o-linear-gradient(bottom, #74bd24, #8fde39);
+	background-image: linear-gradient(to top, #74bd24, #8fde39);
 }
 .button:hover {
 	background-image: none;
 }
 .button:active {
-	box-shadow: inset 0 3px #7e9467;
-	background-image: -webkit-linear-gradient(bottom, #a0d468, #8cc152);
-	background-image: -moz-linear-gradient(bottom, #a0d468, #8cc152);
-	background-image: -o-linear-gradient(bottom, #a0d468, #8cc152);
-	background-image: linear-gradient(to top, #a0d468, #8cc152);
+	box-shadow: inset 0 3px #6d9344;
+	background-image: -webkit-linear-gradient(bottom, #8fde39, #74bd24);
+	background-image: -moz-linear-gradient(bottom, #8fde39, #74bd24);
+	background-image: -o-linear-gradient(bottom, #8fde39, #74bd24);
+	background-image: linear-gradient(to top, #8fde39, #74bd24);
 }
 /*------------*/
